feat: completed filter modal

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -173,3 +173,8 @@
   font-weight: 900;
   font-style: italic;
 }
+
+.PopoverContent {
+  width: var(--radix-popover-trigger-width);
+  max-height: var(--radix-popover-content-available-height);
+}
